#42 добавил внутреннюю ручку получения списка id чатов пользователя, добавил межсервисную аутентификацию по apikey, обновил метод получения chat Ids в сервисе Realtime
